--- a/PL/Carts/CartWindow.xaml
+++ b/PL/Carts/CartWindow.xaml
@@ -11,7 +11,6 @@
     <Window.Resources>
         <DataTemplate x:Key="orderItemTemplate" DataType="local:OrderItem">
             <Grid>
-
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
@@ -27,7 +26,6 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
-
                 </Grid.ColumnDefinitions>
 
                 <TextBox Grid.Column="0" x:Name="name" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.477,3.841" IsEnabled="False"/>
@@ -36,34 +34,39 @@
                 <TextBox Grid.Column="3" x:Name="inStock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Amount}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <TextBox Grid.Column="4" x:Name="amount" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <Button Grid.Column="5" Content="+"  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
-                <Label Grid.Column="6" Content="1"></Label>
+                <TextBlock Grid.Column="6" Text="{Binding Amount}"></TextBlock>
                 <Button Grid.Column="7" Content="-"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0"/>
                 <Button Grid.Column="8" Content="🗑️"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
 
             </Grid>
         </DataTemplate>
     </Window.Resources>
-    <StackPanel Margin="12,28,8,0" RenderTransformOrigin="0.5,0.5" Height="694" VerticalAlignment="Top">
-        <StackPanel.RenderTransform>
-            <TransformGroup>
-                <ScaleTransform/>
-                <SkewTransform AngleX="0.89"/>
-                <RotateTransform/>
-                <TranslateTransform X="3.184"/>
-            </TransformGroup>
-        </StackPanel.RenderTransform>
-        <TextBox x:Name="customerEmail" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120"/>
-        <Label Content="אימייל לקוח" HorizontalAlignment="Left"  VerticalAlignment="Top" RenderTransformOrigin="-0.028,0.356"/>
-        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding CustomerAdress}" VerticalAlignment="Top" Width="120"/>
-        <Label Content="כתובת לקוח" HorizontalAlignment="Left"  VerticalAlignment="Top" RenderTransformOrigin="-0.011,0.394"/>
-        <TextBox x:Name="customerName" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding CustomerName}" VerticalAlignment="Top" Width="120"/>
-        <Label Content="שם לקוח" HorizontalAlignment="Left"  VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <TextBox x:Name="totalPrice" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120"/>
-        <Label Content=" מחיר סופי " HorizontalAlignment="Left"  VerticalAlignment="Top"/>
-        <ListView x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch" Height="152" />
-        <Button x:Name="orderConfirmation" Content="אישור הזמנה" Click="orderConfirmation_Click"/>
-        <Image HorizontalAlignment="Left"  Margin="10,337,0,0" VerticalAlignment="Top" />
-    </StackPanel>
 
+    <Grid HorizontalAlignment="Right">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="400"/>
+            <RowDefinition Height="70"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition  Width="300"/>
+            <ColumnDefinition Width="300"/>
+            
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Row="0" Grid.Column="0" x:Name="customerDetails" >
+            <Label Content="אימייל לקוח" HorizontalAlignment="Right"  VerticalAlignment="Top" RenderTransformOrigin="-0.028,0.356"/>
+            <TextBox x:Name="customerEmail" HorizontalAlignment="Right"  TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+            <Label Content="כתובת לקוח" HorizontalAlignment="Right"  VerticalAlignment="Top" RenderTransformOrigin="-0.011,0.394"/>
+            <TextBox x:Name="customerAdress" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding CustomerAdress}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+            <Label Content="שם לקוח" HorizontalAlignment="Right"  VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+            <TextBox x:Name="customerName" HorizontalAlignment="Right"  TextWrapping="Wrap" Text="{Binding CustomerName}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+            <Label Content="מחיר סופי" HorizontalAlignment="Right"/>
+            <TextBox x:Name="totalPrice" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+        </StackPanel>
+
+        <ListView Grid.ColumnSpan="2"  Grid.Row="1" x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch" Height="700" Margin="10" />
+        <Button Grid.Column="0" Grid.Row="2" x:Name="orderConfirmation" Content="אישור הזמנה" Click="orderConfirmation_Click"/>
+        <Image HorizontalAlignment="Left"  Margin="10,337,0,0" VerticalAlignment="Top" />
+    </Grid>
 
 </Window>
