--- a/PL/Orders/NumOfOrder.xaml
+++ b/PL/Orders/NumOfOrder.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="NumOfOrder" Height="450" Width="800"
         DataContext="{Binding  RelativeSource={RelativeSource self} }">
-    <Grid> 
+    <Grid>
         <Label x:Name="numOrderL"  Content="קוד הזמנה :" HorizontalAlignment="Left" Margin="482,153,0,0" VerticalAlignment="Top" Height="34" Width="86"/>
         <TextBox  x:Name="numOrderT" HorizontalAlignment="Left" Margin="247,152,0,0" TextWrapping="Wrap" Text="{Binding Path=orderID, Mode=TwoWay}" VerticalAlignment="Top" Width="170" Height="25" RenderTransformOrigin="0.5,0.5">
             <TextBox.RenderTransform>
@@ -21,6 +21,7 @@
         </TextBox>
         <Button x:Name="moveToTrackOrder" Content="אישור" HorizontalAlignment="Left" Margin="311,285,0,0" VerticalAlignment="Top"  Click="moveToTrackOrder_Click" />
         <Image HorizontalAlignment="Left" Margin="34,302,0,0" VerticalAlignment="Top"/>
+        <Image Margin="0,0,65,294" Source="/trackOrderPick.jpg" Stretch="Fill"/>
 
     </Grid>
 </Window>
