--- a/PL/Orders/Order.xaml
+++ b/PL/Orders/Order.xaml
@@ -9,6 +9,37 @@
       DataContext="{Binding Path=order, RelativeSource={RelativeSource self}}">
     <Window.Resources>
         <local:InputEnabledConverter x:Key="inputEnabledConverter" />
+       
+        <DataTemplate x:Key="productsInOrder" DataType="local:OrderItem">
+            <Grid>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBox Grid.Row="0" Grid.Column="0" IsEnabled="False">קוד הזמנה</TextBox>
+                <TextBox Grid.Row="0" Grid.Column="1" IsEnabled="False">שם מוצר</TextBox>
+                <TextBox Grid.Row="0" Grid.Column="2" IsEnabled="False">מחיר מוצר</TextBox>
+                <TextBox Grid.Row="0" Grid.Column="3" IsEnabled="False">קוד מוצר</TextBox>
+                <TextBox Grid.Row="0" Grid.Column="4" IsEnabled="False">כמות</TextBox>
+                <TextBox Grid.Row="0" Grid.Column="5" IsEnabled="False">מחיר סופי</TextBox>
+                <TextBox Grid.Row="1" Grid.Column="0" x:Name="id" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Row="1" Grid.Column="1" x:Name="name" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.477,3.841" IsEnabled="False"/>
+                <TextBox Grid.Row="1" Grid.Column="2" x:Name="price" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Price}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Row="1" Grid.Column="3" x:Name="inStock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding ProductID}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Row="1" Grid.Column="4" x:Name="amount" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Amount}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Row="1" Grid.Column="5" x:Name="category" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+               
+            </Grid>
+        </DataTemplate>
     </Window.Resources>
     <Grid Margin="0,10,-258,-276">
         <Grid.ColumnDefinitions>
@@ -20,6 +51,8 @@
             <RowDefinition Height="57*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+       
+
         <TextBox x:Name="id" HorizontalAlignment="Left" Margin="431,27,0,0" TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="ת.ז" HorizontalAlignment="Left" Margin="656,23,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="431,124,0,0" TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
@@ -41,13 +74,7 @@
         <Label Content="תאריך קבלת הזמנה" HorizontalAlignment="Left" Margin="607,206,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
         <Button   x:Name= "recievedDateUpdateButton" IsEnabled="{Binding ElementName=recievedDate,Path=Text,Converter={StaticResource inputEnabledConverter}}" HorizontalAlignment="Left" Margin="220,201,0,0" VerticalAlignment="Top" Height="31" Width="91"  Content="update" Click="recievedDateUpdateButton_Click" >
         </Button>
-        <ListView x:Name="orderItemsList" ItemsSource="{Binding Items}" Margin="24,314,33,183">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn/>
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <ListView x:Name="orderItemsList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource productsInOrder}"  Margin="24,314,33,183"/>
 
     </Grid>
 </Window>
@@ -62,3 +89,13 @@
         <TranslateTransform/>
     </TransformGroup>
 </Label.RenderTransform>-->
+
+
+
+<!--<ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>-->
+<!--
+        </ListView>-->
