--- a/PL/Carts/CartWindow.xaml
+++ b/PL/Carts/CartWindow.xaml
@@ -33,10 +33,10 @@
                 <TextBox Grid.Column="2" x:Name="category" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Price}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <TextBox Grid.Column="3" x:Name="inStock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Amount}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <TextBox Grid.Column="4" x:Name="amount" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
-                <Button Grid.Column="5" Content="+"  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
+                <Button Grid.Column="5" Content="+"  CommandParameter="" Click="addProductToCart_Click" Width="40" Height="40" Margin="0"/>
                 <TextBlock Grid.Column="6" Text="{Binding Amount}"></TextBlock>
-                <Button Grid.Column="7" Content="-"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0"/>
-                <Button Grid.Column="8" Content="🗑️"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
+                <Button Grid.Column="7" Content="-"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="40" Height="40" Margin="1"/>
+                <Button Grid.Column="8" Content="🗑️"  CommandParameter="" Click="deleteProductFromCart_Click"  Width="50" Height="40" Margin="1" />
 
             </Grid>
         </DataTemplate>
@@ -44,16 +44,18 @@
 
     <Grid HorizontalAlignment="Right">
         <Grid.RowDefinitions>
-            <RowDefinition Height="150"/>
+            <RowDefinition Height="74.24"/>
+            <RowDefinition Height="75.76"/>
             <RowDefinition Height="400"/>
             <RowDefinition Height="70"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition  Width="300"/>
+            <ColumnDefinition  Width="600"/>
             <ColumnDefinition Width="300"/>
-            
+
+
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" x:Name="customerDetails" >
+        <StackPanel Grid.Row="0" Grid.Column="0" x:Name="customerDetails" Margin="0,0,0,362" Grid.RowSpan="3" >
             <Label Content="אימייל לקוח" HorizontalAlignment="Right"  VerticalAlignment="Top" RenderTransformOrigin="-0.028,0.356"/>
             <TextBox x:Name="customerEmail" HorizontalAlignment="Right"  TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
             <Label Content="כתובת לקוח" HorizontalAlignment="Right"  VerticalAlignment="Top" RenderTransformOrigin="-0.011,0.394"/>
@@ -61,12 +63,12 @@
             <Label Content="שם לקוח" HorizontalAlignment="Right"  VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
             <TextBox x:Name="customerName" HorizontalAlignment="Right"  TextWrapping="Wrap" Text="{Binding CustomerName}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
             <Label Content="מחיר סופי" HorizontalAlignment="Right"/>
-            <TextBox x:Name="totalPrice" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+            <TextBox x:Name="totalPrice" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding TotalPrice}" Width="120" IsEnabled="False" Height="21"/>
         </StackPanel>
 
-        <ListView Grid.ColumnSpan="2"  Grid.Row="1" x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch" Height="700" Margin="10" />
-        <Button Grid.Column="0" Grid.Row="2" x:Name="orderConfirmation" Content="אישור הזמנה" Click="orderConfirmation_Click"/>
-        <Image HorizontalAlignment="Left"  Margin="10,337,0,0" VerticalAlignment="Top" />
+        <ListView Grid.ColumnSpan="2"  Grid.Row="2" x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch"  Grid.RowSpan="2" HorizontalAlignment="Right" Width="764" Margin="0,43,2,2" />
+        <Button Grid.Row="3" x:Name="orderConfirmation" Content="אישור הזמנה" Click="orderConfirmation_Click" Margin="430,98,278,-88" Grid.ColumnSpan="2"/>
     </Grid>
+
 
 </Window>
