--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -12,6 +12,7 @@
         <Button  x:Name="trackOrderWindow" Content="למעקב הזמנה" HorizontalAlignment="Left" Margin="534,239,0,0" VerticalAlignment="Top" Click="trackOrderWindow_Click" />
         <Image HorizontalAlignment="Left"  Margin="34,302,0,0" VerticalAlignment="Top"/>
         <Label Content="DECATHLON"  VerticalAlignment="Top" Foreground="#FFF1E9E9" FontWeight="Bold" FontSize="87" HorizontalContentAlignment="Center" Margin="0,25,0,0"  Width="800" Height="136" Background="SteelBlue"/>
-     
+        <Button  x:Name="trackOrderWindow_Copy" Content="למעקב הזמנה" HorizontalAlignment="Left" Margin="438,336,0,0" VerticalAlignment="Top" Click="trackOrderWindow_Click" />
+
     </Grid>
 </Window>
