--- a/PL/Simulator.xaml
+++ b/PL/Simulator.xaml
@@ -7,7 +7,11 @@
         mc:Ignorable="d"
         Title="Simulator" Height="450" Width="800">
     <Grid>
-        <Button Content="stop" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="stop" Click="stop_Click"/>
-
+        <Button Content="stop" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="stop" Click="stop_Click" Margin="0,328,0,0"/>
+        <TextBox x:Name="clock" HorizontalAlignment="Left" Margin="495,26,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Height="75" Width="273"/>
+        <TextBox x:Name="orderID" HorizontalAlignment="Left" Margin="58,55,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="currentStatus" HorizontalAlignment="Left" Margin="58,83,0,0" TextWraperticalAlignmenping="Wrap"  Vt="Top" Width="120"/>
+        <TextBox x:Name="nextStatus" HorizontalAlignment="Left" Margin="58,115,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="estimatedTime" HorizontalAlignment="Left" Margin="58,146,0,0" TextWrapping="Wrap" " VerticalAlignment="Top" Width="120"/>
     </Grid>
 </Window>
