--- a/PL/SimulatorWindow.xaml
+++ b/PL/SimulatorWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="PL.Simulator"
+﻿<Window x:Class="PL.SimulatorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="Simulator" Height="450" Width="800">
+        Title="SimulatorWindow" Height="450" Width="800">
     <Grid>
         <Button Content="stop" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="stop" Click="stop_Click" Margin="0,328,0,0"/>
         <TextBox x:Name="clock" HorizontalAlignment="Left" Margin="495,26,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Height="75" Width="273"/>
         <TextBox x:Name="orderID" HorizontalAlignment="Left" Margin="58,55,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="currentStatus" HorizontalAlignment="Left" Margin="58,83,0,0" TextWraperticalAlignmenping="Wrap"  Vt="Top" Width="120"/>
+        <TextBox x:Name="currentStatus" HorizontalAlignment="Left" Margin="58,83,0,0"  Width="120"/>
         <TextBox x:Name="nextStatus" HorizontalAlignment="Left" Margin="58,115,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="estimatedTime" HorizontalAlignment="Left" Margin="58,146,0,0" TextWrapping="Wrap" " VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="estimatedTime" HorizontalAlignment="Left" Margin="58,146,0,0" TextWrapping="Wrap"  Width="120"/>
     </Grid>
 </Window>
