--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button  x:Name="managerWindowBut" Content="מנהל:" HorizontalAlignment="Left" Margin="71,237,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.1,0.663" Click="managerWindowBut_Click"  />
+        <Button  x:Name="managerWindowBut" Content="מנהל" HorizontalAlignment="Left" Margin="71,237,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.1,0.663" Click="managerWindowBut_Click"  />
         <Button  x:Name="orderWindowBut"  Content="להזמנה חדשה" HorizontalAlignment="Center" Margin="0,239,0,0" VerticalAlignment="Top" Click="orderWindowBut_Click" RenderTransformOrigin="1.121,-2.042"/>
         <Button  x:Name="trackOrderWindow" Content="למעקב הזמנה" HorizontalAlignment="Left" Margin="534,239,0,0" VerticalAlignment="Top" Click="trackOrderWindow_Click" />
         <Image HorizontalAlignment="Left"  Margin="34,302,0,0" VerticalAlignment="Top"/>
         <Label Content="DECATHLON"  VerticalAlignment="Top" Foreground="#FFF1E9E9" FontWeight="Bold" FontSize="87" HorizontalContentAlignment="Center" Margin="0,25,0,0"  Width="800" Height="136" Background="SteelBlue"/>
-        <Button Content="start progress" HorizontalAlignment="Center" Margin="0,336,0,0" VerticalAlignment="Top" x:Name="startProgress" Click="startProgress_Click"/>
+        <Button Content="start progress" HorizontalAlignment="Left" Margin="0,63,0,0" VerticalAlignment="Top" x:Name="startProgress" Click="startProgress_Click" Width="140"/>
 
     </Grid>
 </Window>
