--- a/PL/Orders/TrackOrderWindow.xaml
+++ b/PL/Orders/TrackOrderWindow.xaml
@@ -9,9 +9,9 @@
         DataContext="{Binding Path=trackOrder, RelativeSource={RelativeSource self}}"
         >
     <Grid>
-        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="357,42,0,0" TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="357,42,0,0" TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120" IsEnabled="false"/>
         <Label Content="קוד מעקב הזמנה" HorizontalAlignment="Left" Margin="542,42,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="357,73,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="357,73,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120" IsEnabled="false"/>
         <Label Content="סטטוס הזמנה" HorizontalAlignment="Left" Margin="557,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
         <ListView ItemsSource="{Binding Tracking}" Margin="21,112,21,44" />
         <Button x:Name="showOrderDetails"   Content="לצפייה בפרטים" HorizontalAlignment="Left" Margin="21,39,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.298,0.483"  Click="showOrderDetails_Click"/>
