--- a/PL/Carts/CartWindow.xaml
+++ b/PL/Carts/CartWindow.xaml
@@ -66,8 +66,9 @@
             <TextBox x:Name="totalPrice" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding TotalPrice}" Width="120" IsEnabled="False" Height="21"/>
         </StackPanel>
 
-        <ListView Grid.ColumnSpan="2"  Grid.Row="2" x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch"  Grid.RowSpan="2" HorizontalAlignment="Right" Width="764" Margin="0,43,2,2" />
+        <ListView Grid.ColumnSpan="2"  Grid.Row="2" x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch"  Grid.RowSpan="2" HorizontalAlignment="Right" Width="764" Margin="0,68,10,-23" />
         <Button Grid.Row="3" x:Name="orderConfirmation" Content="אישור הזמנה" Click="orderConfirmation_Click" Margin="430,98,278,-88" Grid.ColumnSpan="2"/>
+        <Button Grid.Column="1" x:Name="backToCart"  Content="🛒חזרה לקניות " HorizontalAlignment="Left" Margin="117,10,0,0" VerticalAlignment="Top" Width="173" Click="backToCart_Click" Visibility="Hidden"/>
     </Grid>
 
 
