--- a/PL/SimulatorWindow.xaml
+++ b/PL/SimulatorWindow.xaml
@@ -5,18 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="SimulatorWindow" Height="450" Width="800">
+        Title="SimulatorWindow" Height="450" Width="800" FontFamily="Consolas" WindowStyle="None" >
     <Grid>
         <Button Content="stop" HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="stop" Click="stop_Click" Margin="0,328,0,0"/>
         <TextBox x:Name="clock" HorizontalAlignment="Left" Margin="527,10,0,394" Width="178" Height="30"/>
-        <TextBox x:Name="orderID"  HorizontalAlignment="Left" Margin="58,40,0,370"  Width="120"  />
+        <TextBox x:Name="orderID"  HorizontalAlignment="Left" Margin="58,33,0,377"  Width="120"  />
         <TextBox x:Name="currentStatus"  HorizontalAlignment="Left" Margin="58,78,0,330"  Width="120" />
         <TextBox x:Name="nextStatus"  HorizontalAlignment="Left" Margin="58,124,0,284"  Width="120"/>
-        <TextBox x:Name="estimatedTime"  HorizontalAlignment="Left" Margin="58,162,0,246" Width="120" />
-        <Label x:Name="lblorderID" Content="מספר הזמנה " HorizontalAlignment="Left" Margin="203,51,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblcurrentStatus" Content="סטטוס נוכחי" HorizontalAlignment="Left" Margin="203,88,0,0" VerticalAlignment="Top" Height="31" Width="120"/>
-        <Label x:Name="lblnextStatus" Content="סטטוס הבא" HorizontalAlignment="Left" Margin="203,124,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblestimatedTime" Content="זמן משוער לסיום עדכון" HorizontalAlignment="Left" Margin="203,162,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="noUpdateOrders" Content="אין הזמנות שממתינות לעדכון :) " HorizontalAlignment="Left" Margin="304,217,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="estimatedTime"  HorizontalAlignment="Left" Margin="58,218,0,190" Width="120" />
+        <Label x:Name="lblorderID" Content="מספר הזמנה " HorizontalAlignment="Left" Margin="257,41,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblcurrentStatus" Content="סטטוס נוכחי" HorizontalAlignment="Left" Margin="263,89,0,0" VerticalAlignment="Top" Height="31" Width="120"/>
+        <Label x:Name="lblnextStatus" Content="סטטוס הבא" HorizontalAlignment="Left" Margin="263,133,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.501,1.031"/>
+        <Label x:Name="lblestimatedTime" Content="זמן משוער לסיום עדכון" HorizontalAlignment="Left" Margin="203,225,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="noUpdateOrders" Content="אין הזמנות שממתינות לעדכון :) " HorizontalAlignment="Left" Margin="422,267,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="startTime"  HorizontalAlignment="Left" Margin="58,171,0,237" Width="120" />
+        <Label x:Name="lblstartTime" Content="זמן התחלת עדכון" HorizontalAlignment="Left" Margin="234,180,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
